--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,3 +6,35 @@
     text-decoration: none;
 }
 
+#fondoLogin{
+    background-image: url('../images/inab/bosque2.jpg');
+    background-size: cover; /* Ajusta la imagen para que cubra todo el fondo */
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+}
+#containerLogin{
+    background: linear-gradient(rgba(13, 75, 1, 0.5), rgba(15, 71, 1, 0.5));
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: 158px;
+}
+#h1Login{
+    font-size: 36px; /* Ajusta el tamaño de fuente según tus preferencias */
+    font-weight: bold;
+    color: #fff; /* Color de texto blanco */
+    background-image: linear-gradient(45deg, #dcebe1, #f4f7f5);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    text-align: center;
+    margin-top: 140px;
+}
+#barraLogin{
+    background: #98BF64;
+}
+#h1Credenciales{
+    font-size: 36px; /* Ajusta el tamaño de fuente según tus preferencias */
+    font-weight: bold;
+    color:black; /* Color de texto blanco */
+    
+}
+
